--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,9 +2,10 @@
 
 <% @foods[0..9].each do |food| %>
   <ul class='food'>
-    <li class='upc'><%= food[:gtinupc] %>
-    <li class='description'><%= food[:description] %>
-    <li class='brand'><%= food[:brandowner] %>
-    <li class='ingredients'><%= food[:ingredients] %>
+    <p class='upc'><%= food[:gtinupc] %></p>
+    <p class='description'><%= food[:description] %></p>
+    <p class='brand'><%= food[:brandowner] %></p>
+    <p class='ingredients'><%= food[:ingredients] %></p>
+    <p>---------------------------------------------</p>
   </ul>
 <% end %>
